[gd_scene load_steps=3 format=3 uid="uid://mk6uj7xoynfq"]

[ext_resource type="Script" path="res://main_menu/play_menu.gd" id="1_bd2jh"]
[ext_resource type="Theme" uid="uid://bilm420i6mgm1" path="res://themes/main_menu.tres" id="1_qvtjd"]

[node name="PlayMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qvtjd")
script = ExtResource("1_bd2jh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="label_address_entry" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Server Address:"

[node name="address_entry" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
metadata/_edit_use_anchors_ = true

[node name="label_port_entry" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Server Port:"

[node name="port_entry" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "4545"

[node name="join_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Join"

[node name="host_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Host"

[connection signal="pressed" from="VBoxContainer/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/host_button" to="." method="_on_host_button_pressed"]
